--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root{
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  justify-content: center;
+}
+
 .App {
   text-align: center;
 }
