--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,94 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.clock{
+  height: 500px;
+  width: 500px;
+  background: lightyellow;
+  border: 2px solid grey;
+  border-radius: 50%;
+  margin:20px
+}
+
+.clock {
+  width: 300px;
+  height: 300px;
+  border: 10px solid black;
+  border-radius: 50%;
+  position: relative;
+  padding: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  background: white;
+}
+
+.clock-face {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.hand {
+
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition: all 0.05s;
+}
+
+.hour-hand {
+  height: 6px;
+  width: 25%;
+  left: 25%;
+}
+
+.minute-hand {
+  height: 4px;
+  width: 45%;
+  left: 5%;
+}
+
+.second-hand {
+  height: 2px;
+  background: red;
+  width: 50%;
+}
+
+.number {
+  position: absolute;
+  font-size: 24px;
+  transform: translate(-50%, -50%);
+}
+
+.number1  { top: 5%; left: 75%; }
+.number2  { top: 25%; left: 95%; }
+.number3  { top: 50%; left: 100%; }
+.number4  { top: 75%; left: 95%; }
+.number5  { top: 95%; left: 75%; }
+.number6  { top: 100%; left: 50%; }
+.number7  { top: 95%; left: 25%; }
+.number8  { top: 75%; left: 5%; }
+.number9  { top: 50%; left: 0%; }
+.number10 { top: 25%; left: 5%; }
+.number11 { top: 5%;left: 25%; }
+.number12 { top:0%; left: 50%; }
+
+select{
+  height: 50px;
+    padding: 5px;
+    border-radius: 10px;
+    min-width: 100%;
+}
+
+.screw{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: absolute;
+  top: 49%;
+  left: 49%;
+  background: rgba(255, 166, 0, 0.788);
+}
